--- a/package.json
+++ b/package.json
@@ -13,9 +13,18 @@
     "axios": "^0.26.1",
     "better-scroll": "^2.4.2",
     "eslint": "^8.11.0",
+    "http-proxy-middleware": "^2.0.4",
+    "mobx": "^5.15.7",
+    "mobx-react": "^5.4.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.8",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.0",
+    "redux": "^4.1.2",
+    "redux-persist": "^6.0.0",
+    "redux-promise": "^0.6.0",
+    "redux-thunk": "^2.4.1",
     "swiper": "^8.0.7",
     "typescript": "^4.6.3",
     "web-vitals": "^2.1.4"
@@ -43,5 +52,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-router-dom": "^5.3.3"
   }
 }
